--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Kodama Blog</title>
-    <link href="cv-style.css" rel="stylesheet">
+    <link href="./cv-style.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- navbar -->
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarToggle" style="margin-right: 15px;">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="cv.html">CV</a>
+          <a class="nav-link" href="cv/cv.html">CV</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="blog.html">Blog</a>
