--- a/cv/cv.html
+++ b/cv/cv.html
@@ -14,8 +14,8 @@
 
 <body style="background: #272727;">
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="index.html" style="margin-left: 20px;">
-      <img src="media/logo.png" alt="EK logo">
+    <a class="navbar-brand" href="../index.html" style="margin-left: 20px;">
+      <img src="../media/logo.png" alt="EK logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
       <i class="bi bi-list" style="font-size: 2em; color: white;"></i>
@@ -30,7 +30,7 @@
           <a class="nav-link" href="blog.html">Blog</a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="media/Resume.pdf">Resume</a>
+          <a class="nav-link" href="../media/Resume.pdf">Resume</a>
         </li>
       </ul>
     </div>
@@ -57,7 +57,7 @@
 
   <div class="row" data-spy="scroll" data-target="menu" data-offset="20" style="margin-right:0;">
     <!-- sidebar menu  style="position: relative; box-sizing: border-box;"-->
-    <div class="col-md-3 col-12 lol" style="background-color: #101010;">
+    <div class="col-md-3 col-12 lol" style="background-color: #101010; padding-bottom: 20px">
       <div class="menu sticky-top">
         <a class="menu-item active" href="#about">About</a>
         <a class="menu-item" href="#experience">Experience</a>
@@ -101,7 +101,7 @@
         <li>Collaborates every week with professor and other teaching assistants to prepare lecture material, homework assignments, and exams</li>
       </ul>
       <h2 class="title">Tutor<span class="title2"> Coding Earth</h2>
-      <h3 class="subtitle">Los Angeles, CA/August 2020 – Present</h3>
+      <h3 class="subtitle">Los Angeles, CA/August 2020 – June 2022</h3>
       <ul class="desc">
         <li>Teaches students from intermediate school to high school basic coding to prepare them for college</li>
         <li>Prepares lesson plans for 1-hour sessions and assigns homework for ~10 students in Python and Java</li>
@@ -129,11 +129,11 @@
       <!-- skills -->
       <h1 id="skills">Skills</h1>
       <div class="title">Java, Python, C++</div>
-      <div class="subtitle">Proficient- 3 years</div>
+      <div class="subtitle">3 years</div>
       <div class="title">Swift</div>
-      <div class="subtitle">Intermediate- 2 years</div>
-      <div class="title">HTML/CSS</div>
-      <div class="subtitle">Intermediate- 1 year</div>
+      <div class="subtitle">2 years</div>
+      <div class="title">HTML/CSS, Javascript, C#</div>
+      <div class="subtitle">1 year</div>
       <p></p>
       <!-- education -->
       <h1 id="education">Education</h1>
@@ -143,7 +143,7 @@
         <li>Environmental Science and Health, B.S.</li>
         <li>Computer Programming Minor</li>
         <li>GPA: 3.75/4.00</li>
-        <li>Awards and Honors: Dean's List (7 semesters), SURF recipient, Renaissance Scholar</li>
+        <li>Awards and Honors: Magna Cum Laude, Dean's List (7 semesters), SURF recipient, Renaissance Scholar</li>
       </ul>
       <div class="title">Vanderbilt University</div>
       <div class="subtitle">2018-2019</div>
@@ -190,13 +190,13 @@
       <!-- volunteer work -->
       <h1 id="volunteer">Volunteering</h1>
       <div class="title">Volunteer<span class="title2"> Orthopaedic Institute for Children</div>
-      <h3 class="subtitle">Los Angeles, CA/October 2019 – Present</h3>
+      <h3 class="subtitle">Los Angeles, CA/October 2019 – June 2022</h3>
       <ul class="desc">
         <li>Interact with patients in the waiting room to provide a welcoming environment for the children and help raise money in fundraisers for the clinic</li>
         <li>Assist in physical therapy clinic by preparing paperwork, cleaning beds and machines, and answering phone calls</li>
       </ul>
       <div class="title">Mentor/Committee Member<span class="title2"> Educate2Elevate</div>
-      <h3 class="subtitle">Los Angeles, CA/August 2021 – Present</h3>
+      <h3 class="subtitle">Los Angeles, CA/August 2021 – June 2022</h3>
       <ul class="desc">
         <li>Meet one-on-one weekly as a mentor for high school students to provide guidance as they apply for colleges, scholarships, and make the transition to college</li>
         <li>Serve as the USC liaison to help connect the students to current students, alumni, and other beneficial programs and opportunities</li>
@@ -239,7 +239,7 @@
         <div class="flex-container footer-text" id="">
           <div class="connect-text">Let's Connect!</div>
           <div style="margin-top: 10px; margin-bottom: 10px; align-items: center;">
-            <a href="cv/cv.html">CV</a>
+            <a href="cv.html">CV</a>
             <!-- <a href="blog.html" style="margin-left: 5px;">Blog</a> -->
             <a href="media/Resume.pdf" style="margin-left: 5px;">Resume</a>
           </div>
