--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <head>
-  <title>Elaine Kodama</title>
   <link href="index-style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <meta charset="utf-8">
@@ -23,7 +22,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarToggle" style="margin-right: 15px;">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="cv.html">CV</a>
+          <a class="nav-link" href="cv/cv.html">CV</a>
         </li>
         <!-- <li class="nav-item">
           <a class="nav-link" href="blog.html">Blog</a>
@@ -61,7 +60,7 @@
     <!-- Projects Aquarium & Scrabble -->
     <div class="row justify-content-center">
       <div class="col-xl-4 col-lg-5">
-        <a class="proj-link" href="aquarium.html">
+        <a class="proj-link" href="projects/aquarium.html">
           <div class="card proj" style="border: none;">
             <img class="card-img-top img-responsive proj-pic" src="media/aquarium.png" alt="Aquarium">
             <div class="card-body">
@@ -73,7 +72,7 @@
         </a>
       </div>
       <div class="col-xl-4 col-lg-5">
-        <a class="proj-link" href="scrabble.html">
+        <a class="proj-link" href="projects/scrabble.html">
           <div class="card proj" style="border: none;">
             <img class="card-img-top img-responsive proj-pic" src="media/scrabble.jpg" alt="Scrabble">
             <div class="card-body">
@@ -89,7 +88,7 @@
     <!-- Projects Flashcards & Evite System -->
     <div class="row justify-content-center align-items-center">
       <div class="col-xl-4 col-lg-5">
-        <a class="proj-link" href="flashcards.html">
+        <a class="proj-link" href="projects/flashcards.html">
           <div class="card proj" style="border: none;">
             <img class="card-img-top img-responsive proj-pic" src="media/flashcards.png" alt="Flashcards">
             <div class="card-body">
@@ -101,7 +100,7 @@
           </a>
       </div>
       <div class="col-xl-4 col-lg-5">
-        <a class="proj-link" href="evite.html">
+        <a class="proj-link" href="projects/evite.html">
           <div class="card proj" style="border: none;">
             <img class="card-img-top img-responsive proj-pic" src="media/evite.png" alt="Aquarium">
             <div class="card-body">
@@ -114,7 +113,7 @@
       </div>
     </div>
     <div class="col-xl-4 col-lg-5">
-      <a class="proj-link" href="accessc.html">
+      <a class="proj-link" href="projects/accessc.html">
         <div class="card proj" style="border: none;">
           <img class="card-img-top img-responsive proj-pic" src="media/accessc-logo.png" alt="AccesSC">
           <div class="card-body">
@@ -192,7 +191,7 @@
           font-size: 20px;
           font-weight: normal;
           color:#FFFFFF;
-          max-width: 848px;">Hello, I am a senior at the University of Southern California. I will be graduating in May 2022 with a Bachelor's of Science in environmental health and science and a minor in computer programming.
+          max-width: 848px;">Hello, I am a recent 2022 graduate at the University of Southern California with a Bachelor's of Science in environmental health and science and a minor in computer programming.
           Coming from a pre-medical background, I have extensive knowledge of the natural, physical, and environmental sciences as well as professional experience in the healthcare field.</p>
           <p class="about-text" style="font-family: -apple-system, BlinkMacSystemFont, sans-serif;
           font-size: 20px;
@@ -206,7 +205,7 @@
   </div>
 </body>
 
-<footer style="background-color: #EC3599; padding: 40px 10px 40px 10px; margin-top: 40px;">
+<footer style="background-color: #EC3599;  padding: 40px 10px 50px 40px; margin-top: 40px; margin-right: -15px; margin-left: -15px;">
   <!-- Links -->
   <div class="container-fluid">
     <div class="row align-items-center">
@@ -215,7 +214,7 @@
           <div class="connect-text">Let's Connect!</div>
           <div style="margin-top: 10px; margin-bottom: 10px; align-items: center;">
             <a href="cv/cv.html">CV</a>
-            <!-- <a href="blog.html" style="margin-left: 5px;">Blog</a> -->
+            <a href="blog.html" style="margin-left: 5px;">Blog</a>
             <a href="media/Resume.pdf" style="margin-left: 5px;">Resume</a>
           </div>
           <div style="margin-top: 10px; align-items: center;">
@@ -231,27 +230,29 @@
 
       <!-- Leave a message -->
       <div class="col-l-9 col-md-7" style="margin-top: 3%; margin-bottom: 2%; text-align: center; color: #FFFFFF;">
-        <h3>Email me:</h3>
-        <h3>ek@elainekodama.com</h3>
-        <!-- <form action="https://aemail.com/Nx92" method="post" enctype="text/plain">
+        <h3 style="color: #FFFFFF;">Email me:</h3>
+        <h3 style="color: #FFFFFF;">ek@elainekodama.com</h3>
+      </div>
+      <!-- <div class="col-l-9 col-md-7" style="margin-top: 3%; margin-bottom: 2%;">
+        <form id="javascript_form">
           <div class="row justify-content-center align-items-center flex">
             <div class="col">
               <div class="form-group" style="padding: 5px;">
-                <input type="text" name="Name" class="form-control input-text input-shadow" id="nameInput" placeholder="Name">
+                <input type="name" class="form-control input-text input-shadow" id="nameInput" placeholder="Name">
               </div>
             </div>
             <div class="col">
               <div class="form-group" style="padding: 5px;">
-                <input type="text" name="Email" class="form-control input-text input-shadow" id="emailInput" placeholder="Email">
+                <input type="text" name="subject" class="form-control input-text input-shadow" id="emailInput" placeholder="Email">
               </div>
             </div>
           </div>
           <div class="form-group" style="padding: 5px;">
-            <textarea type="text" name="Message" class="form-control input-text input-shadow" id="messageInput" placeholder="NOT IMPLEMENTED YET" rows="3"></textarea>
+            <textarea type="message" name="text" class="form-control input-text input-shadow" id="messageInput" placeholder="NOT IMPLEMENTED YET" rows="3"></textarea>
           </div>
           <button type="submit" class="button-submit" id="js_send" value="Send">Submit</button>
-        </form> -->
-      </div>
+        </form>
+      </div> -->
     </div>
   </div>
 </footer>
