--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             <a class="nav-link" href="portfolio.html"><b>Portfolio</b></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="cv.html">CV</a>
+            <a class="nav-link" href="cv/cv.html">CV</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="blog.html">Blog</a>
@@ -37,7 +37,7 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="aquarium.html">
+        <a target="_blank" href="./projects/aquarium.html">
           <img src="winnie.jpeg" alt="Aquarium" width="600" height="400">
         </a>
         <div class="desc">
