--- a/projects/evite.html
+++ b/projects/evite.html
@@ -14,8 +14,8 @@
 
 <body style="background: #272727;">
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="index.html" style="margin-left: 20px;">
-      <img src="media/logo.png" alt="EK logo">
+    <a class="navbar-brand" href="../index.html" style="margin-left: 20px;">
+      <img src="../media/logo.png" alt="EK logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
       <i class="bi bi-list" style="font-size: 2em; color: white;"></i>
@@ -24,13 +24,13 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarToggle">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0" style="margin-right: 15px;">
         <li class="nav-item">
-          <a class="nav-link" href="cv.html">CV</a>
+          <a class="nav-link" href="../cv/cv.html">CV</a>
         </li>
         <!-- <li class="nav-item">
           <a class="nav-link" href="blog.html">Blog</a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="media/Resume.pdf">Resume</a>
+          <a class="nav-link" href="../media/Resume.pdf">Resume</a>
         </li>
       </ul>
     </div>
@@ -38,8 +38,8 @@
 
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb" style="margin: 20px;">
-      <li class="breadcrumb-item"><a href="index.html" style="text-decoration: none;">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Scrabble</li>
+      <li class="breadcrumb-item"><a href="../index.html" style="text-decoration: none;">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Evite</li>
     </ol>
   </nav>
 
@@ -51,12 +51,13 @@
     <div class="row justify-content-center align-items-center">
       <div class="col">
         <div class="embed-responsive embed-responsive-16by9" style="padding: 20px;">
-          <iframe class="embed-responsive-item" src="media/scrabble-demo.mp4" allowfullscreen></iframe>
+          <img src="../media/evite.png" alt="evite Logo" style="width: 75%;">
         </div>
       </div>
       <div class="col words">
-        <p id="title">Scrabble</p>
-        <p>Javafx, OOP</p>
+        <p id="title">Evite</p>
+        <p>Java, OOP</p>
+        <p>Demo coming soon</p>
         <p>This repository has been made private as it is a class assignment.
         <p>Please email me with your GitHub username/email for access: ek@elainekodama.com</p>
         </div>
