--- a/projects/aquarium.html
+++ b/projects/aquarium.html
@@ -18,7 +18,7 @@
 
 <body style="background: #272727;">
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="index.html" style="margin-left: 20px;">
+    <a class="navbar-brand" href="../index.html" style="margin-left: 20px;">
       <img src="media/logo.png" alt="EK logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,13 +28,13 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarToggle">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0" style="margin-right: 15px;">
         <li class="nav-item">
-          <a class="nav-link" href="cv.html">CV</a>
+          <a class="nav-link" href="../cv/cv.html">CV</a>
         </li>
         <!-- <li class="nav-item">
           <a class="nav-link" href="blog.html">Blog</a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="media/Resume.pdf">Resume</a>
+          <a class="nav-link" href="../media/Resume.pdf">Resume</a>
         </li>
       </ul>
     </div>
@@ -42,7 +42,7 @@
 
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb" style="margin: 20px;">
-      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+      <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
       <li class="breadcrumb-item active" aria-current="page">Aquarium</li>
     </ol>
   </nav>
@@ -51,7 +51,7 @@
       <div class="row justify-content-center align-items-center">
         <div class="col">
           <div class="embed-responsive embed-responsive-16by9" style="padding: 20px;">
-            <iframe class="embed-responsive-item" src="media/aquarium-demo.mp4" allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" src="../media/aquarium-demo.mp4" allowfullscreen></iframe>
           </div>
         </div>
         <div class="col words">
