--- a/projects/flashcards.html
+++ b/projects/flashcards.html
@@ -18,8 +18,8 @@
 
 <body style="background: #272727;">
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="index.html" style="margin-left: 20px;">
-      <img src="media/logo.png" alt="EK logo">
+    <a class="navbar-brand" href="../index.html" style="margin-left: 20px;">
+      <img src="../media/logo.png" alt="EK logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
       <i class="bi bi-list" style="font-size: 2em; color: white;"></i>
@@ -28,13 +28,13 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarToggle">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0" style="margin-right: 15px;">
         <li class="nav-item">
-          <a class="nav-link" href="cv.html">CV</a>
+          <a class="nav-link" href="../cv/cv.html">CV</a>
         </li>
         <!-- <li class="nav-item">
           <a class="nav-link" href="blog.html">Blog</a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="media/Resume.pdf">Resume</a>
+          <a class="nav-link" href="../media/Resume.pdf">Resume</a>
         </li>
       </ul>
     </div>
@@ -42,7 +42,7 @@
 
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb" style="margin: 20px;">
-      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+      <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
       <li class="breadcrumb-item active" aria-current="page">Flashcards</li>
     </ol>
   </nav>
@@ -50,7 +50,7 @@
     <div class="container-fluid" style="padding: 20px;">
       <div class="row justify-content-center align-items-center">
         <div class="col">
-            <img src="media/flashcards.png" alt="Flashcards Logo" style="width: 75%;">
+            <img src="../media/flashcards.png" alt="Flashcards Logo" style="width: 75%;">
         </div>
         <div class="col words">
           <p id="title">My Flashcards</p>
